Add Android Quuppa BLE advertising support with platform abstraction
Integrate android-bgps-quuppa-flutter-plugin alongside the existing iOS plugin
using factory method pattern and dependency injection. QuuppaService is now
abstract with IosQuuppaService and AndroidQuuppaService selected at runtime
via QuuppaService.forPlatform(). Add AndroidAdvertisingConf, AdvModes, and
AdvTxPowers models, sealed QuuppaAdvertisingConfig hierarchy, and platform-aware
server endpoint (/api/v1/device/android/conf).

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,14 +6,19 @@ homepage: https://github.com/synapseslab/flutter-bluegps-sdk
 
 environment:
   sdk: ^3.6.1
-  flutter: '>=3.3.0'
+  flutter: ">=3.3.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  bgps_flutter_quuppa_driver:
+  bgps_flutter_ios_quuppa_driver:
     git:
       url: https://github.com/synapseslab/ios-bgps-quuppa-flutter-plugin.git
+      ref: e0a0129fb5b1d23369ff02bb91b14282e573c44a
+  bgps_flutter_android_quuppa_driver:
+    git:
+      url: https://github.com/synapseslab/android-bgps-quuppa-flutter-plugin.git
+      ref: ebe3831adb4fbbbc63694e830169a324faa4cd38
   http: ^1.2.0
 
 dev_dependencies:
